03-voting-app-microservices/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: voting-app-policy
spec:
  podSelector:
    matchLabels:
      # Apply this to both Redis and Postgres
      app: postgres 
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker   # Allow Worker to write to DB
    - podSelector:
        matchLabels:
          app: result   # Allow Result to read from DB
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-policy
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vote     # Allow Vote to write to Redis
    - podSelector:
        matchLabels:
          app: worker   # Allow Worker to read from Redis
